--- a/src/reset.css
+++ b/src/reset.css
@@ -3,13 +3,6 @@
 }
 
 html,
-body,
-#root,
-.tall {
-  height: 100%;
-}
-
-html,
 body {
   margin: 0;
   padding: 0;
@@ -23,4 +16,17 @@ body {
 body,
 input {
   font-size: 16px;
+}
+
+/* html,
+body,
+#root,
+.tall {
+  height: 100%;
+} */
+
+a,
+a:visited {
+  color: white;
+  padding: 1rem;
 }
